fixed front page mobile layout issues and added fadein animation to the work page

--- a/css/front.css
+++ b/css/front.css
@@ -17,54 +17,10 @@ h3{
 }
 
 .top-container h1, .top-container h2{
-	line-height: .5em;
+	line-height: 1.1em;
 	text-align: center;
 }
 
-#front-top{
-	width: 100%;
-	display: none;
-}
-
-.fronttopsection{
-	padding: .6em;
-	display: inline-block;
-	height: 18em;
-	text-align: center;
-}
-
-#half-phone{
-	z-index: 10;
-	width: 262px;
-}
-
-#skimphonecontainer{
-	height: 262px;
-}
-
-#skimcontainer{
-	height: 175px;
-	width: 220px;
-	position: relative;
-	top: -192px;
-	left: 20px;
-	overflow: hidden;
-}
-
-#skimimg{
-	position: relative;
-	top:0px;
-	width: 220px;
-	transition: top 2s ease-in-out;
-	-webkit-transition: top 2s ease-in-out;
-	-moz-transition: top 2s ease-in-out;
-	-ms-transition: top 2s ease-in-out;
-	-o-transition: top 2s ease-in-out;
-}
-
-#skimcontainer img:hover{
-	top: -390px;
-}
 
 .linkyicons:hover img{
 	border-bottom: solid #e97f02; /*orange*/
@@ -92,6 +48,12 @@ h3{
 	display: inline-block;
 	text-align: center;
 	height: 3em;
+	padding-bottom: 2em;
+	overflow: hidden;
+}
+
+#reachouticons {
+	height: 4em;
 }
 
 #reachouticons .linkyicons{
@@ -182,7 +144,7 @@ h3{
 	display: inline-block;
 }
 
-@media only screen and (max-width: 900px){
+@media only screen and (max-width: 908px){
 
 	
 	#me{
@@ -201,6 +163,10 @@ h3{
 	}
 	#frontthings{
 		margin:0;
+	}
+	
+	.yellowbackground.top-container{
+		padding-bottom: 6em;
 	}
 	
 	#reachouticons .linkyicons{
@@ -222,6 +188,14 @@ h3{
 
 @media only screen and (max-width: 500px){
 
+	.icons-adventure{
+		width: 3em;
+	}
+	
+	.icons-adventure img{
+		max-width: 2em;
+		max-height: 2em;
+	}
 	
 	#navbar{
 		font-size: 1.1em;
