--- a/css/workfront.css
+++ b/css/workfront.css
@@ -1,3 +1,7 @@
+@-webkit-keyframes fadeIn {from {opacity:0;} to {opacity:1;}}
+@-moz-keyframes fadeIn {from {opacity:0;} to {opacity:1;}}
+@keyframes fadeIn {from {opacity:0;} to {opacity:1;}}
+
 .work{
 	background-color: #555;
 	width:100%;
@@ -10,17 +14,35 @@
 	margin: 0 auto;
 }
 
-.rocket,.everwonder,.cardboard,.skimbox,.ccomfort{
+.proj{
 	display:inline;
+	
 }
 
-.rocket img,.everwonder img,.cardboard img,.skimbox img,.ccomfort img{
+.proj img{
 	vertical-align: top;
+	opacity: 0;
+	
+	-webkit-animation: fadeIn ease-in 1;
+	-moz-animation: fadeIn ease-in 1;
+	animation: fadeIn ease-in 1;
+	
+	-webkit-animation-fill-mode: forwards;
+	-moz-animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
+	
+	-webkit-animation-duration: 1s;
+	-moz-animation-duration: 1s;
+	animation-duration: 1s;
 }
 
 .rocket img{
 	width: 26%;
 	padding-top: 5em;
+	
+	-webkit-animation-delay: 1s;
+	animation-delay: 1s;
+	
 }
 
 .everwonder img{
@@ -28,12 +50,20 @@
 	padding-top:12em;
 	padding-left: 7%;
 	padding-right: 7%;
+
+	-webkit-animation-delay: .5s;
+	animation-delay: .5s;
+	
 }
 
 
 .ccomfort img{
 	width: 20%;
 	padding-top:10em;
+	
+	-webkit-animation-delay: 1.3s;
+	animation-delay: 1.3s;
+	
 }
 
 .cardboard img{
@@ -41,12 +71,20 @@
 	padding-top:2em;
 	padding-left: 6%;
 	padding-right: 5%;
+
+	-webkit-animation-delay: 1.6s;
+	animation-delay: 1.6s;
+	
 }
 
 .skimbox img{
 	width: 28%;
 	margin-top:-2em;
 	padding-bottom: 2em;
+
+	-webkit-animation-delay: 2s;
+	animation-delay: 2s;
+	
 }
 
 .anexperience img{
